include/libqgraphicsitem.h

typedef QMetaObject::Connection QMetaObject__Connection;
typedef struct QCursor QCursor;
typedef struct QEvent QEvent;
typedef struct QGraphicsEffect QGraphicsEffect;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsItemGroup QGraphicsItemGroup;
typedef struct QGraphicsObject QGraphicsObject;
typedef struct QGraphicsScene QGraphicsScene;
typedef struct QGraphicsWidget QGraphicsWidget;
typedef struct QMetaObject QMetaObject;
typedef struct QMetaObject__Connection QMetaObject__Connection;
typedef struct QRectF QRectF;
typedef struct QTransform QTransform;
typedef QGraphicsItem::CacheMode CacheMode;                   // C++ enum
typedef QGraphicsItem::PanelModality PanelModality;           // C++ enum
typedef int CacheMode;          // C ABI enum
typedef int PanelModality;      // C ABI enum
QGraphicsScene* QGraphicsItem_Scene(const QGraphicsItem* self);
QGraphicsItem* QGraphicsItem_ParentItem(const QGraphicsItem* self);
QGraphicsItem* QGraphicsItem_TopLevelItem(const QGraphicsItem* self);
QGraphicsObject* QGraphicsItem_ParentObject(const QGraphicsItem* self);
QGraphicsWidget* QGraphicsItem_ParentWidget(const QGraphicsItem* self);
QGraphicsWidget* QGraphicsItem_TopLevelWidget(const QGraphicsItem* self);
QGraphicsWidget* QGraphicsItem_Window(const QGraphicsItem* self);
QGraphicsItem* QGraphicsItem_Panel(const QGraphicsItem* self);
void QGraphicsItem_SetParentItem(QGraphicsItem* self, QGraphicsItem* parent);
libqt_list /* of QGraphicsItem* */ QGraphicsItem_ChildItems(const QGraphicsItem* self);
bool QGraphicsItem_IsWidget(const QGraphicsItem* self);
bool QGraphicsItem_IsWindow(const QGraphicsItem* self);
bool QGraphicsItem_IsPanel(const QGraphicsItem* self);
QGraphicsObject* QGraphicsItem_ToGraphicsObject(QGraphicsItem* self);
QGraphicsObject* QGraphicsItem_ToGraphicsObject2(const QGraphicsItem* self);
QGraphicsItemGroup* QGraphicsItem_Group(const QGraphicsItem* self);
void QGraphicsItem_SetGroup(QGraphicsItem* self, QGraphicsItemGroup* group);
int QGraphicsItem_Flags(const QGraphicsItem* self);
void QGraphicsItem_SetFlag(QGraphicsItem* self, int flag);
void QGraphicsItem_SetFlags(QGraphicsItem* self, int flags);
int QGraphicsItem_CacheMode(const QGraphicsItem* self);
void QGraphicsItem_SetCacheMode(QGraphicsItem* self, int mode);
int QGraphicsItem_PanelModality(const QGraphicsItem* self);
void QGraphicsItem_SetPanelModality(QGraphicsItem* self, int panelModality);
bool QGraphicsItem_IsBlockedByModalPanel(const QGraphicsItem* self);
libqt_string QGraphicsItem_ToolTip(const QGraphicsItem* self);
void QGraphicsItem_SetToolTip(QGraphicsItem* self, libqt_string toolTip);
QCursor* QGraphicsItem_Cursor(const QGraphicsItem* self);
void QGraphicsItem_SetCursor(QGraphicsItem* self, QCursor* cursor);
bool QGraphicsItem_HasCursor(const QGraphicsItem* self);
void QGraphicsItem_UnsetCursor(QGraphicsItem* self);
bool QGraphicsItem_IsVisible(const QGraphicsItem* self);
bool QGraphicsItem_IsVisibleTo(const QGraphicsItem* self, QGraphicsItem* parent);
void QGraphicsItem_SetVisible(QGraphicsItem* self, bool visible);
void QGraphicsItem_Hide(QGraphicsItem* self);
void QGraphicsItem_Show(QGraphicsItem* self);
bool QGraphicsItem_IsEnabled(const QGraphicsItem* self);
void QGraphicsItem_SetEnabled(QGraphicsItem* self, bool enabled);
bool QGraphicsItem_IsSelected(const QGraphicsItem* self);
void QGraphicsItem_SetSelected(QGraphicsItem* self, bool selected);
bool QGraphicsItem_AcceptDrops(const QGraphicsItem* self);
void QGraphicsItem_SetAcceptDrops(QGraphicsItem* self, bool on);
double QGraphicsItem_Opacity(const QGraphicsItem* self);
double QGraphicsItem_EffectiveOpacity(const QGraphicsItem* self);
void QGraphicsItem_SetOpacity(QGraphicsItem* self, double opacity);
QGraphicsEffect* QGraphicsItem_GraphicsEffect(const QGraphicsItem* self);
void QGraphicsItem_SetGraphicsEffect(QGraphicsItem* self, QGraphicsEffect* effect);
int QGraphicsItem_AcceptedMouseButtons(const QGraphicsItem* self);
void QGraphicsItem_SetAcceptedMouseButtons(QGraphicsItem* self, int buttons);
bool QGraphicsItem_AcceptHoverEvents(const QGraphicsItem* self);
void QGraphicsItem_SetAcceptHoverEvents(QGraphicsItem* self, bool enabled);
bool QGraphicsItem_AcceptTouchEvents(const QGraphicsItem* self);
void QGraphicsItem_SetFocus1(QGraphicsItem* self, int focusReason);
void QGraphicsItem_EnsureVisible1(QGraphicsItem* self, QRectF* rect);
void QGraphicsItem_EnsureVisible22(QGraphicsItem* self, QRectF* rect, int xmargin);
void QGraphicsItem_EnsureVisible3(QGraphicsItem* self, QRectF* rect, int xmargin, int ymargin);
void QGraphicsItem_EnsureVisible5(QGraphicsItem* self, double x, double y, double w, double h, int xmargin);
void QGraphicsItem_EnsureVisible6(QGraphicsItem* self, double x, double y, double w, double h, int xmargin, int ymargin);
QTransform* QGraphicsItem_ItemTransform2(const QGraphicsItem* self, QGraphicsItem* other, bool* ok);
void QGraphicsItem_SetTransform2(QGraphicsItem* self, QTransform* matrix, bool combine);
libqt_list /* of QGraphicsItem* */ QGraphicsItem_CollidingItems1(const QGraphicsItem* self, int mode);
bool QGraphicsItem_IsObscured1(const QGraphicsItem* self, QRectF* rect);
void QGraphicsItem_Update1(QGraphicsItem* self, QRectF* rect);
void QGraphicsItem_Scroll3(QGraphicsItem* self, double dx, double dy, QRectF* rect);
void QGraphicsItem_Delete(QGraphicsItem* self);
QGraphicsObject* QGraphicsObject_new();
QMetaObject* QGraphicsObject_MetaObject(const QGraphicsObject* self);
void* QGraphicsObject_Metacast(QGraphicsObject* self, const char* param1);
int QGraphicsObject_Metacall(QGraphicsObject* self, int param1, int param2, void** param3);
libqt_string QGraphicsObject_Tr(const char* s);
void QGraphicsObject_GrabGesture(QGraphicsObject* self, int typeVal);
void QGraphicsObject_UngrabGesture(QGraphicsObject* self, int typeVal);
bool QGraphicsObject_Event(QGraphicsObject* self, QEvent* ev);
libqt_string QGraphicsObject_Tr2(const char* s, const char* c);
libqt_string QGraphicsObject_Tr3(const char* s, const char* c, int n);
void QGraphicsObject_GrabGesture2(QGraphicsObject* self, int typeVal, int flags);
void QGraphicsObject_UpdateMicroFocus(QGraphicsObject* self);
void QGraphicsObject_Delete(QGraphicsObject* self);